--- a/recipies/lasagna.html
+++ b/recipies/lasagna.html
@@ -7,5 +7,29 @@
 </head>
 <body>
     <h1>Homemade Lasagna</h1>
+    <img src="../images/Lasagna.png" alt="Photo of Lasagna" width="512">
+    <h3>Description</h3>
+    <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
+    <h4>Ingredients</h4>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Canned Tomatoes</li>
+        <li>Fresh Herbs</li>
+        <li>Sugar</li>
+        <li>Spices and Seasonings</li>
+        <li>Noodles</li>
+        <li>Chhese</li>
+        <li>Eggs</li>
+    </ul>
+    <h4>Steps</h4>
+    <ol>
+        <li>Cook the meat</li>
+        <li>Cook the noodles</li>
+        <li>Make the cheese layer</li>
+        <li>Assemle the lasagna</li>
+        <li>Bake the lasagna</li>
+    </ol>
+
 </body>
 </html>
